--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -190,12 +190,12 @@ label[for="subRedditStyleCheckbox"] {
 /* Also make the CSS text box bigger, because why not. */
 .stylesheet-customize-container textarea { height:500px; }
 
-/* ಠ_ಠ 
+/* ಠ_ಠ */
 .arrow.down {
 visibility: hidden;
 display: none
 } 
-*/
+
 /*SUBMISSION PAGE INSTRUCTIONS*/
 .titlebox .usertext-body .md ul {
     display: none
@@ -1115,7 +1115,7 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before {content:"Ence Arsplin"}
+a.author[href$=Esplin]:before {content:"AAAAAA"}
 a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
 a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
@@ -1251,7 +1251,7 @@ a.author[href$=lord-hemingway]:after { content:" (Clopper 44)" }
 a.author[href$=Generic_Builder]:after { content:" IS SO KAWAII!" }
 a.author[href$=volcano_bakemeats]:after { content:" (Flour Sack Monster)" }
 a.author[href$=Chillusion]:after { content:" (Because I can.)" }
-a.author[href$=Esplin]:after { content:" (New to the Internet)" }
+a.author[href$=Esplin]:after { content:" (aaaaaaa)" }
 a.author[href$=waffen337]:after { content:"(Fucking ass ball bajongler)" }
 a.author[href$=sirtophat]:after { content:" (flaming homosexual)"; color:purple }
 a.author[href$=cheesemoo]:after { content:" (Continually fucks with the CSS)" }
