--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -57,24 +57,24 @@ div.titlebox span.number:after {
 
 /* Top */
 #sr-header-area {
-    background-color: black;
-    border-bottom: 1px black;
+    background-color: white;
+    border-bottom: 1px white;
     }
 .sr-bar a, .sr-bar .separator {
-    color: #999 !important
+    color: #111 !important
     }
 #sr-more-link {
     display: none
     }
 .dropdown .title {
-    background-color: black;
-    color: #999 !important
+    background-color: white;
+    color: #111 !important
     }
 .drop-choices .choice {
-    color: black !important
+    color: white !important
     }
 .dropdown .title {
-    color: #999
+    color: #111
     }
 
 /* Tabs */
