--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -945,8 +945,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%lyrastpaddys%%)
 }
 
@@ -955,8 +955,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%shamrock%%)
 }
 
@@ -965,8 +965,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 300px;
-Height: 150px;
+Width: 200px;
+Height: 100px;
 background-image: url(%%shamrockbox%%)
 }
 
@@ -975,8 +975,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 124px;
+Width: 70px;
+Height: 58px;
 background-image: url(%%shamrocklike%%)
 }
 
@@ -995,8 +995,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 120px;
+Width: 70px;
+Height: 56px;
 background-image: url(%%shamrockpoker%%)
 }
 
@@ -1005,8 +1005,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%shamrockrealise%%)
 }
 
@@ -1015,8 +1015,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 205px;
+Width: 100px;
+Height: 137px;
 background-image: url(%%stpinkie%%)
 }
 
@@ -1035,8 +1035,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 185px;
-Height: 150px;
+Width: 123px;
+Height: 100px;
 background-image: url(%%adority%%)
 }
 
@@ -1045,8 +1045,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%ajab%%)
 }
 
@@ -1055,8 +1055,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%nmmab%%)
 }
 
@@ -1065,8 +1065,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%pinkieab%%)
 }
 
@@ -1075,8 +1075,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%rarityab%%)
 }
 
@@ -1085,8 +1085,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%rbdab%%)
 }
 
@@ -1095,8 +1095,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%spikeab%%)
 }
 
@@ -1105,8 +1105,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%twiab%%)
 }
 
@@ -1115,8 +1115,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%flutterab%%)
 }
 
@@ -1125,8 +1125,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 150px;
+Width: 100px;
+Height: 100px;
 background-image: url(%%tiaab%%)
 }
 
@@ -1135,8 +1135,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 205px;
+Width: 100px;
+Height: 137px;
 background-image: url(%%nmmnova%%)
 }
 
@@ -1155,8 +1155,8 @@ background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 150px;
-Height: 216px;
+Width: 100px;
+Height: 144px;
 background-image: url(%%queenfaust%%)
 }
 
@@ -1175,8 +1175,8 @@ background-position: 0px 0px;
 display:block;
 clear: none;
 float: left;
-width: 150px;
-height: 204px;
+width: 100px;
+height: 136px;
 background-image: url(%%lyraswagger%%)
 }
 
@@ -1218,6 +1218,76 @@ float: left;
 width: 150px;
 height: 167px;
 background-image: url(%%lunasocks%%)
+}
+
+a[href|="/daftponies"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 126px;
+background-image: url(%%daftponies%%)
+}
+
+a[href|="/fearthebees"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 60px;
+background-image: url(%%fearthebees%%)
+}
+
+a[href|="/flutterbag"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 140px;
+background-image: url(%%flutterbag%%)
+}
+
+a[href|="/flutterstress"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 80px;
+height: 80px;
+background-image: url(%%flutterstress%%)
+}
+
+a[href|="/lolidunno"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 100px;
+background-image: url(%%lolidunno%%)
+}
+
+a[href|="/lyradress"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 154px;
+background-image: url(%%lyradress%%)
+}
+
+a[href|="/whassamattayou"]{
+background-position: 0px 0px;
+display:block;
+clear: none;
+float: left;
+width: 100px;
+height: 100px;
+background-image: url(%%whassamattayou%%)
 }
 
 /* ==Boxed reddit CSS Theme v1.1.3 - (http://www.reddit.com/r/boxed/)== */
