--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -297,49 +297,23 @@ left: 0;
 .submit-link {
     display:none !important;
 }
-/*** Submit a link -> Create a submission (Totally not stolen from /r/mylittlefoodmanes) ***/
 
-.sidebox.submit .morelink:before {
-    display: block;
-    clear: none;
-    content: "Create a Submission";
-    text-align: center;
-    color: #369;
-    width: 101%
-    }
+/* Hover message */
 
-.sidebox.submit-text .morelink a {
-    position: absolute;
-    top: 0;
-    font-size: 1px;
-    text-align: right;
-    color: #f2f8fd
+.submit-text:hover:before {
+    position:absolute;
+    display:block;
+    z-index:1000;
+    padding:5px;
+    border:1px solid #333;
+    background-color:#FFF;
+    content: "Mafia signups, Mafia games, Mafia updates, Mafia ponies, Mafia Mafia...";
+    text-align:center;
+    font-size:10px;
+    font-weight:normal;
+    margin-left:0px;
+    margin-top:35px
     }
-.sidebox.submit .morelink:hover:before {
-    color: blue
-    }
-.sidebox.submit-text:hover a {
-    color: #b4cee5
-    }
-/*
-.sidebox .subtitle:before {
-    display: block;
-    clear: none;
-    content: " Mafia/forum games, meta threads, Mafia fillies, Mafia mafia...";
-    color: dimgrey;
-    font-size: 8pt !important
-    }
-.sidebox .subtitle {
-    font-size: 0px
-    }
-.sidebox.create {
-    display: none
-    }
-.sidebox.submit-text .spacer a {
-    background-image: url(%%submissionmafia%%);
-    background-position: -0px -0px;
-    background-repeat: no-repeat
-    } */
 
 /*New post spam filtered warning (borrowed from /r/mylittlepony)*/
 #title-field.roundfield:before
