--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -197,3 +197,13 @@ a[href|="/swordulan"] {
     background-repeat: no-repeat;
     background-image: url(%%swordulan%%)
     }
+
+a[href|="/himntor"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 224px;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-image: url(%%himntor%%)
+    }
