--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1162,6 +1162,7 @@ a[href|="/seanigel"]
 /* sheet 9 */
 a[href|="/wheels"],
 a[href|="/vymedic"],
+a[href|="/vymiggy"],
 a[href|="/applejackson"],
 a[href|="/teibounce"],
 a[href|="/fiddlesticks"],
@@ -1190,7 +1191,8 @@ a[href|="/wheels"]
 	width: 175px;
 	background-position: -0px -0px;
 }
-a[href|="/vymedic"]
+a[href|="/vymedic"],
+a[href|="/vymiggy"]
 {
 	width: 175px;
 	background-position: -175px -0px;
@@ -1278,3 +1280,38 @@ a[href|="/HOERS"]
 	background-position: -117px -1121px;
 }
 /* end sheet 9 */
+
+
+/* sheet 10 */
+a[href|="/letsspinthis"],
+a[href|="/bizzaam"],
+a[href|="/bplouis"],
+a[href|="/raricoffee"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet10%%)
+}
+a[href|="/letsspinthis"]
+{
+	width: 151px;
+	background-position: -0px -0px;
+}
+a[href|="/bizzaam"]
+{
+	width: 80px;
+	background-position: -151px -0px;
+}
+a[href|="/bplouis"]
+{
+	width: 143px;
+	background-position: -231px -0px;
+}
+a[href|="/raricoffee"]
+{
+	width: 189px;
+	background-position: -0px -140px;
+}
+/* end sheet 10 */
