--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -164,13 +164,13 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:1000px;
+ height:1400px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
-/*Sweetie Belle Stare by FinalFlutter*/
- background-image:url(%%sbstare-shading%%);
+/*Googly Belle by MasterSubLink*/
+ background-image:url(%%sbstare-googly%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
