--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -366,7 +366,7 @@ a.author[href$="sna_fu_bar"]:before
 
 a.author[href$="srsbsnsman"]:before {content:"Forblaze"}
 a.author[href$="Sangfroidish"]:before {content: "Sangfroidfish"}
-a.author[href$="ctare"]:before {content: "Cone Engineer Master Interpreter Sensei Editor Card Czar Commander Overlord Wearwolf Jesus Captain Care Bear Ctare"}
+a.author[href$="ctare"]:before {content: "Time Keeper Cone Engineer Master Interpreter Sensei Editor Card Czar Commander Overlord Wearwolf Jesus Captain Care Bear Ctare"}
 a.author[href$="Draze"]:before {content: "Mother Mustang"}
 a.author[href$="KommandantSprakle"]:before {content: "PeasantSprakle"}
 a.author[href$="sna_fu_bar"]:before {content: "anus_barf"}
