--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -398,7 +398,7 @@ a[href="/TI994A"]
     height: 364px;
     background-image: url(%%TI-994A%%)
     }
-a[href="/SWAPSPACE"] 
+/*a[href="/SWAPSPACE"] 
 {
     display: block;
     clear: none;
@@ -407,6 +407,7 @@ a[href="/SWAPSPACE"]
     height: 19000px;
     background-image: url(%%SWAPSPACE%%)
     }
+*/
 
 a[href="/thisisanemote"] 
 {
