--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -117,9 +117,9 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%discentia-hat%%);
- width:60px;
- height:60px;
+ background:url(%%pinkie-hat%%);
+ width:77px;
+ height:65px;
  margin-top:-35px;
  margin-left:4px;
  margin-bottom:-14px;
@@ -423,7 +423,7 @@ a[href|="/rfillytgap"],a[href|="/rt00"],a[href|="/re00"],a[href|="/rrdhuh"],a[hr
 a[href|="/smooze"],a[href|="/rsmooze"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%smooze%%)!important}
 
-a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
+a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/rswagintosh"],a[href|="/ra24"],.flair-pinkiepie,.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
 {background-position:0 -100%}
 
 a[href|="/lunateehee"],a[href|="/a02"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/rcutealoo"],a[href|="/re02"],.flair-luna,.side .md table tr:nth-of-type(5) td:nth-of-type(2):after
