--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -359,6 +359,26 @@ a[href='/scoottongue']{
 a[href|='/scoottongue']{ background-position: -0px -2729px; width: 150px; height: 111px; }
 
 
+a[href|='/rariooh'], a[href|='/believe'], a[href|='/rarityhasadrink'], a[href|='/happyflam'], a[href|='/scarylyra'], a[href|='/reallyhappyflam'], a[href|='/biopony'], a[href|='/littleshake'], a[href|='/gameofponies'], a[href|='/raricoffee'], a[href|='/wish'], a[href|='/flimandflam1'], a[href|='/flimandflam2'], a[href|='/moonlight'], a[href|='/flimandflam3'], a[href|='/fireflies']{
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%ss4%%)
+    }
 
-
-
+a[href|='/rariooh']{background-position: -0px -0px; width: 150px; height: 305px; }
+a[href|='/believe']{ background-position: -0px -305px; width: 300px; height: 280px; }
+a[href|='/rarityhasadrink']{ background-position: -150px -0px; width: 150px; height: 222px; }
+a[href|='/happyflam']{ background-position: -0px -585px; width: 150px; height: 184px; }
+a[href|='/scarylyra']{  background-position: -150px -585px; width: 150px; height: 147px;  }
+a[href|='/reallyhappyflam']{ background-position: -150px -732px; width: 150px; height: 139px; }
+a[href|='/biopony']{ background-position: -0px -769px; width: 150px; height: 139px; }
+a[href|='/littleshake']{ background-position: -0px -908px; width: 200px; height: 124px; }
+a[href|='/gameofponies']{ background-position: -0px -1032px; width: 150px; height: 124px;  }
+a[href|='/raricoffee']{ background-position: -150px -1032px; width: 150px; height: 123px; }
+a[href|='/wish']{ background-position: -0px -1156px; width: 200px; height: 113px; }
+a[href|='/flimandflam1']{ background-position: -0px -1269px; width: 200px; height: 113px; }
+a[href|='/flimandflam2']{ background-position: -0px -1382px; width: 200px; height: 110px; }
+a[href|='/moonlight']{ background-position: -0px -1492px; width: 200px; height: 82px; }
+a[href|='/flimandflam3']{ background-position: -150px -222px; width: 150px; height: 80px; }
+a[href|='/fireflies']{ background-position: -0px -1574px; width: 200px; height: 57px; }
